Fix for image stretch issue

--- a/assets/css/about.scss
+++ b/assets/css/about.scss
@@ -1,5 +1,3 @@
-@import "main.scss";
-
 .about {
     background-color: var(--black__dark);
     padding: 0 0 4em 0;
@@ -52,6 +50,8 @@
         }
     
         img {
+            display: block;
+            width: 100%;
             margin-bottom: 2em;
 
             @media screen and (min-width: 500px) {
@@ -116,6 +116,7 @@
 
     img {
         display: block;
+        width: 100%;
         max-width: 800px;
         margin: 2em 0;
     }
